--- a/styles.css
+++ b/styles.css
@@ -1,216 +1,14 @@
 @charset "UTF-8";
-html {
-  box-sizing: border-box; }
-
-*, *:before, *:after {
-  box-sizing: inherit;
-  padding: 0;
-  margin: 0; }
-
-html {
-  margin-right: 20px;
-  margin-left: 20px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1.5; }
-
-img {
-  max-width: 100%; }
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow-x: hidden; }
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -10px;
-  margin-bottom: 20px;
-  margin-left: -10px; }
-
-.col {
-  padding-right: 10px;
-  padding-left: 10px; }
-  .col-12 {
-    width: 100%; }
-  .col-6 {
-    width: 50%; }
-  .col-4 {
-    width: 33.33333%; }
-  @media (max-width: 599px) {
-    .col-sm-12 {
-      width: 100%; }
-    .col-sm-6 {
-      width: 50%; }
-    .col-sm-4 {
-      width: 33.33333%; } }
-  @media (max-width: 399px) {
-    .col-smm-12 {
-      width: 100%; }
-    .col-smm-6 {
-      width: 50%; }
-    .col-smm-4 {
-      width: 33.33333%; } }
-  .col-fluid {
-    width: 33.33333%; }
-    @media (max-width: 599px) {
-      .col-fluid {
-        width: 50%; } }
-    @media (max-width: 399px) {
-      .col-fluid {
-        width: 100%; } }
-
-.header {
-  width: 100%;
-  min-height: 95vh;
-  max-width: 1200px;
-  opacity: 0.9;
-  margin: 0 auto; }
-  .header--one {
-    background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
-    background-size: cover;
-    margin-top: 0; }
-  .header--one .content {
-    margin: auto;
-    text-align: center;
-    margin: 0 auto 40px;
-    word-break: break-all; }
-  .header--two {
-    background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
-    background-size: cover;
-    background-position: 0 0; }
-  .header--two .content {
-    margin: auto;
-    text-align: left;
-    padding: 12rem 0 12rem 0;
-    color: white;
-    word-break: break-all; }
-  .header .heading--two {
-    background: green; }
-  .header .heading--one {
-    background: green; }
-  .header .container .button {
-    background: green; }
-
-.heading {
-  font-family: 'Roboto Slab', serif; }
-  .heading--one {
-    font-size: 4em; }
-  .heading--two {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-    margin-top: 80px; }
-  .heading--three {
-    font-size: 1em;
-    text-align: center; }
-
-.text {
-  margin-bottom: 20px;
-  font-style: normal; }
-
-.container {
-  text-align: center; }
-  .container .button {
-    margin: 0;
-    border: none;
-    border-radius: 4px;
-    width: auto;
-    color: #eee;
-    background-color: #666;
-    font-size: 1rem;
-    text-decoration: none;
-    cursor: pointer; }
-    .container .button--one {
-      padding: 10px 90px; }
-    .container .button--two {
-      padding: 10px 90px; }
-    .container .button--three {
-      padding: 10px 60px; }
-
-.card {
-  width: 100%;
-  padding: 20px;
-  overflow: hidden;
-  /*&__content {
-    @media (min-width: 600px) {
-      align-items: flex-start;
-    }
-  }*/ }
-  .card__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 15px; }
-  .card__blockquote {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    font-style: italic;
-    font-size: 18px;
-    background: pink; }
-  .card__name {
-    display: flex;
-    align-items: baseline;
-    font-size: 1em;
-    background: green; }
-  .card__text {
-    font-size: 12px; }
-  .card__img {
-    width: 100%;
-    border-radius: 100%;
-    margin-bottom: 20px; }
-
-/*.cardlist {
-  &__row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -10px;
-    margin-left: -10px;
-  }
-
-  &__col {
-    @include columns(12);
-    display: flex;
-    padding-right: 10px;
-    padding-left: 10px;
-    margin: 0 0 20px;
-
-    @media (min-width: 600px) {
-      @include columns(4);
-      margin-left: 0;
-      margin-right: 0;
-    }
-  }
-}*/
-.item {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  padding: 0;
-  overflow: hidden;
-  margin: 70px 0; }
-  .item__content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-left: 10px; }
-  .item__heading {
-    font-family: 'Roboto Slab', serif;
-    font-size: 21px;
-    font-weight: bold; }
-  .item__text {
-    font-size: 18px; }
-  .item__img {
-    height: 30px;
-    width: 30px; }
-
 .form {
   background-color: pink;
   max-width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
+  .form--one {
+    margin: 0 20px; }
+  .form--two {
+    margin: 0 20px; }
   .form__content {
     max-width: 100%;
     height: inherit;
@@ -246,65 +44,3 @@ main {
       margin: 0 auto;
     }
   }*/ } }
-
-.blockquote {
-  width: 100%;
-  padding-right: 10px;
-  padding-left: 10px;
-  max-width: 100%;
-  margin-left: 20px; }
-  .blockquote--one {
-    font-style: italic;
-    font-size: 1.5em;
-    margin-bottom: 20px; }
-    .blockquote--one::first-letter {
-      text-indent: -20px; }
-  .blockquote--two {
-    font-size: 0.75em;
-    margin-bottom: 20px; }
-  @media (min-width: 600px) {
-    .blockquote {
-      width: 50%;
-      padding-right: 10px;
-      padding-left: 10px;
-      margin: 0 auto;
-      float: right;
-      padding: 40px 0 40px 40px; } }
-
-.container--two {
-  display: inline-flex;
-  flex-direction: row; }
-
-.bar {
-  background-color: rgba(0, 0, 0, 0.5);
-  list-style: none;
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  height: 60px; }
-  .bar--content a {
-    text-decoration: none;
-    color: white; }
-  .bar--one {
-    font-size: 1.5em;
-    font-family: 'Roboto Slab', serif;
-    font-weight: bold;
-    background-color: transparent;
-    padding-left: 20px; }
-  .bar--two {
-    padding-right: 20px;
-    background-color: transparent; }
-  .bar--three {
-    display: none; }
-  @media (min-width: 500px) {
-    .bar--three {
-      display: initial;
-      background-color: #666;
-      border-radius: 4px;
-      padding: 0 20px;
-      max-height: 30px;
-      align-self: center; } }
