--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -19,9 +19,8 @@
   }
 
   &--trans{
-    @keyframes fade {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+    opacity: 0;
+    transition:
+    opacity: 1;
   }
 }
