--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ main {
   margin: 0 auto;
   overflow-x: hidden; }
 
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -61,6 +67,12 @@ main {
       .col-fluid {
         width: 100%; } }
 
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
 .header {
   width: 100%;
   min-height: 95vh;
@@ -86,12 +98,12 @@ main {
     padding: 12rem 0 12rem 0;
     color: white;
     word-break: break-all; }
-  .header .heading--two {
-    background: green; }
-  .header .heading--one {
-    background: green; }
-  .header .container .button {
-    background: green; }
+
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
 
 .heading {
   font-family: 'Roboto Slab', serif; }
@@ -105,11 +117,24 @@ main {
     font-size: 1em;
     text-align: center; }
   .heading--trans {
-    transition: transparent 1s linear 0; }
+    opacity: 0;
+    transition: opacity 1, 1s, ease-in; }
+
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
 
 .text {
   margin-bottom: 20px;
   font-style: normal; }
+
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
 
 .container {
   text-align: center; }
@@ -161,6 +186,12 @@ main {
     .card__content {
       align-items: flex-start; } }
 
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
 .item {
   display: flex;
   flex-direction: row;
@@ -182,6 +213,18 @@ main {
   .item__img {
     height: 30px;
     width: 30px; }
+
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
 
 .form {
   background-color: pink;
@@ -225,6 +268,12 @@ main {
     }
   }*/ } }
 
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
 .blockquote {
   width: 100%;
   padding-right: 10px;
@@ -249,30 +298,36 @@ main {
       float: right;
       padding: 40px 0 40px 40px; } }
 
+@keyframes appear {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
 .container--two {
   display: inline-flex;
   flex-direction: row; }
 
 .bar {
-  background-color: rgba(0, 0, 0, 0.5);
-  list-style: none;
   display: inline-flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
-  margin: 0;
+  height: 60px;
   padding: 0;
-  height: 60px; }
+  margin: 0;
+  list-style: none;
+  flex-direction: row;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: space-between;
+  align-items: center; }
   .bar--content a {
-    text-decoration: none;
-    color: white; }
+    color: #fff;
+    text-decoration: none; }
   .bar--one {
+    padding-left: 20px;
+    font-family: "Roboto Slab", serif;
     font-size: 1.5em;
-    font-family: 'Roboto Slab', serif;
     font-weight: bold;
-    background-color: transparent;
-    padding-left: 20px; }
+    background-color: transparent; }
   .bar--two {
     padding-right: 20px;
     background-color: transparent; }
@@ -280,10 +335,9 @@ main {
     display: none; }
   @media (min-width: 500px) {
     .bar--three {
-      display: initial;
+      max-height: 30px;
+      padding: 3px 20px;
+      margin: auto;
       background-color: #666;
       border-radius: 4px;
-      padding: 3px 20px;
-      max-height: 30px;
-      align-self: center;
-      margin: auto; } }
+      align-self: center; } }
