--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,41 +1,65 @@
-.card {
+@import "scss/variables";
+
+.card { //heldur utanum allt
   width: 100%;
-  padding: $gutter;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   overflow: hidden;
+  margin: $gutter*6 0px;
 
-  &__content {
+  &__image {
     display: flex;
-    padding: 15px;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: $gutter;
+    width: 100%;
 
-    @media (min-width: 600px) {
-      align-items: flex-start;
+
+    &__img { //heldur utanum myndir
+      width: 100%;
+      margin-bottom: $gutter;
+      border-radius: 100%;
     }
   }
 
-  &__blockquote {
-    display: flex;
-    align-items: center;
-    margin-bottom: $gutter;
-    font-size: 18px;
-    font-style: italic;
-    background: "pink";
-  }
+    &__content { //heldur utanum texta
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-end;
 
-  &__name {
-    display: flex;
-    align-items: flex-start;
-    font-size: 1em;
-    background: "green";
-  }
 
-  &__text {
-    font-size: 12px;
-  }
+      &__blockquote {
+        flex-direction: row;
+        text-align: center;
+        font-size: 18px;
+        font-style: italic;
+        align-self: center;
+        font-weight: bold;
+        margin-bottom: $gutter;
 
-  &__img {
-    width: 100%;
-    padding: 15px;
-    margin-bottom: $gutter;
-    border-radius: 100%;
+        &__three {
+          flex-direction: row;
+          text-align: center;
+          font-size: 18px;
+          font-style: italic;
+          align-self: center;
+          padding: $gutter*0.65;
+          font-weight: bold;
+          margin-bottom: $gutter;
+        }
+      }
+
+      &__name {
+        font-size: 1em;
+        align-self: center;
+        font-weight: bold;
+      }
+
+      &__text {
+        font-size: 12px;
+        align-self: center;
+      }
   }
 }
