--- a/scss/button.scss
+++ b/scss/button.scss
@@ -16,9 +16,11 @@
     background-color: #666;
     border-radius: 4px;
 
+    transition: background-color 500ms ease, color 500ms ease;
+
     &--one { //niðri á form síðu
       padding: 10px $gutter*5.5;
-      margin-top: $gutter; 
+      margin-top: $gutter;
     }
 
     &--two { //niðri á index síðu
@@ -30,5 +32,8 @@
       margin-top: $gutter*3;
       padding: 10px $gutter*2;
     }
+  }
+  .button:hover {
+    background-color: #383838;
   }
 }
