--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,7 +3,7 @@
 .header {
   width: 100%;
   max-width: $max-width;
-  min-height: 95vh;
+
   margin: 0 auto;
   opacity: 0.9;
 
@@ -11,23 +11,26 @@
     margin-top: 0;
     background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
     background-size: cover;
+    margin-bottom: $gutter*6;
+    min-height: 100vh;
   }
 
   &--one .content {
-    margin: 0 auto $gutter * 2;
+    margin-top: $gutter * 10;
     text-align: center;
     word-break: break-all;
   }
 
   &--two {
     background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
-    background-position: 0 0;
-    background-size: cover;
+    background-position: center;
+    background-size: contain;
+    max-height: 70vh;
   }
 
   &--two .content {
     padding: 12rem 0;
-    margin: auto;
+    margin: auto 0;
     color: #fff;
     text-align: left;
     word-break: break-all;
