--- a/scss/text.scss
+++ b/scss/text.scss
@@ -1,6 +1,9 @@
 @import "scss/variables";
 
 .text {
+  width: 100%;
+  padding: 0;
+  margin: $gutter * 3.5 0;
   margin-bottom: $gutter;
   font-style: normal;
 }
