--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,9 @@ main {
     .card__content__text {
       font-size: 12px;
       align-self: center; }
+  @media (min-width: 400px) {
+    .card {
+      align-items: flex-start; } }
 
 .item {
   display: flex;
