--- a/styles.css
+++ b/styles.css
@@ -147,51 +147,37 @@ main {
     background-color: #383838; }
 
 .card {
+  background: pink;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-  margin: 120px 0px; }
-  .card__image {
-    display: flex;
+  text-align: center;
+  overflow: auto; }
+  .card__img {
+    width: 80%;
+    border-radius: 100%;
+    margin: 0 auto; }
+  .card__blockquote {
+    font-size: 18px;
+    font-style: italic;
+    font-weight: bold; }
+  .card__name {
+    font-size: 16px; }
+  .card__text {
+    font-size: 12px;
+    margin-bottom: 20px; }
+
+@media (min-width: 400px) {
+  .card {
     flex-direction: column;
-    justify-content: space-around;
-    padding: 20px;
-    width: 100%; }
-    .card__image__img {
-      width: 100%;
-      margin-bottom: 20px;
-      border-radius: 100%; }
-  .card__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-end; }
-    .card__content__blockquote {
-      flex-direction: row;
-      text-align: center;
-      font-size: 18px;
-      font-style: italic;
-      align-self: center;
-      font-weight: bold;
-      margin-bottom: 20px; }
-      .card__content__blockquote__three {
-        flex-direction: row;
-        text-align: center;
-        font-size: 18px;
-        font-style: italic;
-        align-self: center;
-        padding: 13px;
-        font-weight: bold;
-        margin-bottom: 20px; }
-    .card__content__name {
-      font-size: 1em;
-      align-self: center;
-      font-weight: bold; }
-    .card__content__text {
-      font-size: 12px;
-      align-self: center; }
+    align-items: center;
+    margin: 0 auto; } }
+
+@media (min-width: 600px) {
+  .card {
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto; } }
 
 .item {
   display: flex;
