--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -18,9 +18,8 @@
     text-align: center;
   }
 
-  &--trans{
+  &--trans {
     opacity: 0;
-    transition:
-    opacity: 1;
+    //transition: opacity 1;
   }
 }
