--- a/scss/blockquote.scss
+++ b/scss/blockquote.scss
@@ -1,29 +1,27 @@
 @import "scss/variables";
 
 .blockquote {
-  @include columns(12);
   max-width: 100%;
-  margin-left: $gutter;
+  margin-left: ;
 
   &--one {
-    font-style: italic;
-    font-size: 1.5em;
     margin-bottom: $gutter;
+    font-size: 1.5em;
+    font-style: italic;
+  }
 
-    &::first-letter { //ath!!!
-      text-indent: -$gutter;
-    }
+  &--one::first-letter { //ath!!!
+    text-indent: -$gutter;
   }
 
   &--two {
-    font-size: 0.75em;
     margin-bottom: $gutter;
+    font-size: 0.75em;
   }
 
   @media (min-width: 600px) {
-    @include columns(6);
-    margin: 0 auto;
     float: right;
-    padding: 2*$gutter 0 2*$gutter 2*$gutter;
+    padding: $gutter * 2 0 $gutter * 2 $gutter * 2;
+    margin: 0 auto;
   }
 }
