--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 html {
   box-sizing: border-box;
   margin-right: 20px;
@@ -291,28 +292,32 @@ main {
   flex-direction: column;
 }
 
+.form__item {
+  margin-bottom: 20px;
+}
+
 .form .boxes {
   border-radius: 2px;
   -webkit-appearance: none;
 }
 
-.form .date {
+.form .dates {
   display: flex;
   justify-content: space-between;
 }
 
-.form .date .labels {
+.form .dates .labels {
   width: 100%;
   flex-grow: 2;
   text-align: center;
 }
 
-.form .date .genders {
+.form .dates .genders {
   display: flex;
   flex-direction: column;
 }
 
-.form .date .boxes {
+.form .dates .boxes {
   width: 100%;
   text-align: center;
   border-radius: 2px;
@@ -337,9 +342,10 @@ main {
 .blockquote {
   width: 100%;
   max-width: 100%;
-  padding-right: 10px;
+  /*padding-right: 10px;
   padding-left: 10px;
-  margin-left: 20px;
+  margin-left: 20px;*/
+  padding: 40px;
 }
 
 .blockquote--one {
