--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,7 +2,7 @@
 
 .header {
   width: 100%;
-  max-width: $max-width;
+  max-width: 1200px;
   min-height: 95vh;
   margin: 0 auto;
   opacity: 0.9;
