--- a/scss/form.scss
+++ b/scss/form.scss
@@ -4,26 +4,23 @@
   display: flex;
   max-width: $max-width;
   flex-direction: column;
-  background-color: "pink";
 
-  &__container {
+  &__row {
     display: flex;
-    margin: auto;
+    flex-wrap: wrap;
+    margin-right: - $gutter / 2;
+    margin-left: - $gutter / 2;
   }
 
-  &--one {
-    background: pink;
-    margin: 0 auto;
-  }
+  &__col {
 
-  &--two {
-    background: pink;
-    margin: auto;
-  }
-
-  &__content {
-    max-width: 100%;
-    height: inherit;
+    @media (min-width: 599px) {
+      @include columns(4);
+      padding-right: $gutter / 2;
+      padding-left: $gutter / 2;
+      margin-right: (1/12 * 100) * 1%;
+      margin-left: (1/12 * 100) * 1%;
+    }
   }
 
   &__item {
@@ -58,21 +55,4 @@
       flex-grow: 2;
     }
   }
-
-  @media (max-width: 599px) {
-
-  }
-
-  @media (min-width: 399px) {
-
-    /*
-    &--one{
-      margin: 0 $gutter*2 0 0; upp, hægri, niður, vinstri
-    }
-
-    &--two {
-      margin: 0 auto;
-    }
-  }*/
-}
 }
