--- a/styles.css
+++ b/styles.css
@@ -1,242 +1,166 @@
-@charset "UTF-8";
-
 html {
   box-sizing: border-box;
   margin-right: 20px;
   margin-left: 20px;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit;
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 img {
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 main {
   max-width: 1200px;
   margin: 0 auto;
-  overflow-x: hidden;
-}
+  overflow-x: hidden; }
 
 .row {
   display: flex;
   flex-wrap: wrap;
   margin-right: -10px;
   margin-bottom: 20px;
-  margin-left: -10px;
-}
+  margin-left: -10px; }
 
 .col {
   padding-right: 10px;
-  padding-left: 10px;
-}
-
-.col-12 {
-  width: 100%;
-}
-
-.col-6 {
-  width: 50%;
-}
-
-.col-4 {
-  width: 33.33333%;
-}
-
-@media (max-width: 599px) {
-  .col-sm-12 {
-    width: 100%;
-  }
-
-  .col-sm-6 {
-    width: 50%;
-  }
-
-  .col-sm-4 {
-    width: 33.33333%;
-  }
-}
-
-@media (max-width: 399px) {
-  .col-smm-12 {
-    width: 100%;
-  }
-
-  .col-smm-6 {
-    width: 50%;
-  }
-
-  .col-smm-4 {
-    width: 33.33333%;
-  }
-}
-
-.col-fluid {
-  width: 33.33333%;
-}
-
-@media (max-width: 599px) {
+  padding-left: 10px; }
+  .col-12 {
+    width: 100%; }
+  .col-6 {
+    width: 50%; }
+  .col-4 {
+    width: 33.33333%; }
+  @media (max-width: 599px) {
+    .col-sm-12 {
+      width: 100%; }
+    .col-sm-6 {
+      width: 50%; }
+    .col-sm-4 {
+      width: 33.33333%; } }
+  @media (max-width: 399px) {
+    .col-smm-12 {
+      width: 100%; }
+    .col-smm-6 {
+      width: 50%; }
+    .col-smm-4 {
+      width: 33.33333%; } }
   .col-fluid {
-    width: 50%;
-  }
-}
-
-@media (max-width: 399px) {
-  .col-fluid {
-    width: 100%;
-  }
-}
+    width: 50%; }
+    @media (max-width: 599px) {
+      .col-fluid {
+        width: 50%; } }
+    @media (max-width: 399px) {
+      .col-fluid {
+        width: 100%; } }
 
 .header {
   width: 100%;
   max-width: 1200px;
   min-height: 95vh;
   margin: 0 auto;
-  opacity: 0.9;
-}
-
-.header--one {
-  margin-top: 0;
-  background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
-  background-size: cover;
-}
-
-.header--one .content {
-  margin: 0 auto 40px;
-  text-align: center;
-  word-break: break-all;
-}
-
-.header--two {
-  background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
-  background-position: 0 0;
-  background-size: cover;
-}
-
-.header--two .content {
-  padding: 12rem 0;
-  margin: auto;
-  color: #fff;
-  text-align: left;
-  word-break: break-all;
-}
-
-.header .heading--two {
-  background: "green";
-}
-
-.header .heading--one {
-  background: "green";
-}
-
-.header .container .button {
-  background: "green";
-}
+  opacity: 0.9; }
+  .header--one {
+    margin-top: 0;
+    background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
+    background-size: cover; }
+  .header--one .content {
+    margin: 0 auto 40px;
+    text-align: center;
+    word-break: break-all; }
+  .header--two {
+    background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
+    background-position: 0 0;
+    background-size: cover; }
+  .header--two .content {
+    padding: 12rem 0;
+    margin: auto;
+    color: #fff;
+    text-align: left;
+    word-break: break-all; }
+  .header .heading--two {
+    background: "green"; }
+  .header .heading--one {
+    background: "green"; }
+  .header .container .button {
+    background: "green"; }
 
 .heading {
-  font-family: "Roboto Slab", serif;
-}
+  font-family: "Roboto Slab", serif; }
+  .heading--one {
+    font-size: 4em; }
+  .heading--two {
+    margin-top: 80px;
+    margin-bottom: 20px;
+    font-size: 1.5rem; }
+  .heading--three {
+    font-size: 1em;
+    text-align: center; }
 
-.heading--one {
-  font-size: 4em;
-}
-
-.heading--two {
-  margin-top: 80px;
-  margin-bottom: 20px;
-  font-size: 1.5rem;
-}
-
-.heading--three {
-  font-size: 1em;
-  text-align: center;
-}
+@keyframes fade {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 
 .text {
   margin-bottom: 20px;
-  font-style: normal;
-}
+  font-style: normal; }
 
 .container {
-  text-align: center;
-}
-
-.container .button {
-  margin: 0;
-  border: "none";
-  width: auto;
-  border-radius: 4px;
-  color: #eee;
-  background-color: #666;
-  font-size: 1rem;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.container .button--one {
-  padding: 10px 90px;
-}
-
-.container .button--two {
-  padding: 10px 90px;
-}
-
-.container .button--three {
-  margin-top: 20px;
-  padding: 10px 60px;
-}
+  text-align: center; }
+  .container .button {
+    width: auto;
+    margin: 0;
+    font-size: 1rem;
+    color: #eee;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: #666;
+    border-radius: 4px; }
+    .container .button--one {
+      padding: 10px 90px; }
+    .container .button--two {
+      padding: 10px 90px; }
+    .container .button--three {
+      padding: 10px 60px;
+      margin-top: 20px; }
 
 .card {
   width: 100%;
   padding: 20px;
-  overflow: hidden;
-}
-
-.card__content {
-  display: flex;
-  padding: 15px;
-}
-@media (min-width: 600px) {
+  overflow: hidden; }
   .card__content {
+    display: flex;
+    padding: 15px; }
+    @media (min-width: 600px) {
+      .card__content {
+        align-items: flex-start; } }
+  .card__blockquote {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-style: italic;
+    background: "pink"; }
+  .card__name {
+    display: flex;
     align-items: flex-start;
-  }
-}
-
-.card__blockquote {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-  font-size: 18px;
-  font-style: italic;
-  background: "pink";
-}
-
-.card__name {
-  display: flex;
-  align-items: flex-start;
-  font-size: 1em;
-  background: "green";
-}
-
-.card__text {
-  font-size: 12px;
-}
-
-.card__img {
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 20px;
-  border-radius: 100%;
-}
+    font-size: 1em;
+    background: "green"; }
+  .card__text {
+    font-size: 12px; }
+  .card__img {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 100%; }
 
 .item {
   display: flex;
@@ -244,184 +168,114 @@ main {
   padding: 0;
   margin: 70px 0;
   overflow: hidden;
-  flex-direction: row;
-}
-
-.item__content {
-  display: flex;
-  width: 100%;
-  margin-left: 10px;
-  flex-direction: column;
-}
-
-.item__heading {
-  font-family: "Roboto Slab", serif;
-  font-size: 21px;
-  font-weight: bold;
-}
-
-.item__text {
-  font-size: 18px;
-}
-
-.item__img {
-  width: 30px;
-  height: 30px;
-}
+  flex-direction: row; }
+  .item__content {
+    display: flex;
+    width: 100%;
+    margin-left: 10px;
+    flex-direction: column; }
+  .item__heading {
+    font-family: "Roboto Slab", serif;
+    font-size: 21px;
+    font-weight: bold; }
+  .item__text {
+    font-size: 18px; }
+  .item__img {
+    width: 30px;
+    height: 30px; }
 
 .form {
   display: flex;
   max-width: 1200px;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: "pink";
-}
-
-.form--one {
-  margin: 0 20px;
-}
-
-.form--two {
-  margin: 0 20px;
-}
-
-.form__content {
-  display: flex;
-  max-width: 100%;
-  height: inherit;
-  flex-direction: column;
-}
-
-.form__item {
-  margin-bottom: 20px;
-}
-
-.form .boxes {
-  border-radius: 2px;
-  -webkit-appearance: none;
-}
-
-.form .dates {
-  display: flex;
-  justify-content: space-between;
-}
-
-.form .dates .labels {
-  width: 100%;
-  flex-grow: 2;
-  text-align: center;
-}
-
-.form .dates .genders {
-  display: flex;
-  flex-direction: column;
-}
-
-.form .dates .boxes {
-  width: 100%;
-  text-align: center;
-  border-radius: 2px;
-  -webkit-appearance: none;
-  flex-grow: 2;
-}
-
-@media (min-width: 399px) {
-
-.form {
-  /*
-&--one{
-  margin: 0 $gutter*2 0 0; upp, hægri, niður, vinstri
-}
-
-&--two {
-  margin: 0 auto;
-}
-}*/ }
-}
+  flex-direction: column; }
+  .form__row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -10px;
+    margin-left: -10px; }
+  @media (min-width: 599px) {
+    .form__col {
+      width: 33.33333%;
+      padding-right: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-left: 10px;
+      margin-right: 8.33333%;
+      margin-left: 8.33333%; } }
+  .form__item {
+    margin-bottom: 20px; }
+  .form .boxes {
+    border-radius: 2px;
+    -webkit-appearance: none; }
+  .form .dates {
+    display: flex;
+    justify-content: space-between; }
+    .form .dates .labels {
+      width: 100%;
+      flex-grow: 2;
+      text-align: center; }
+    .form .dates .genders {
+      display: flex;
+      flex-direction: column; }
+    .form .dates .boxes {
+      width: 100%;
+      text-align: center;
+      border-radius: 2px;
+      -webkit-appearance: none;
+      flex-grow: 2; }
 
 .blockquote {
-  width: 100%;
   max-width: 100%;
-  /*padding-right: 10px;
-  padding-left: 10px;
-  margin-left: 20px;*/
-  padding: 40px;
-}
-
-.blockquote--one {
-  margin-bottom: 20px;
-  font-size: 1.5em;
-  font-style: italic;
-}
-
-.blockquote--one::first-letter {
-  text-indent: -20px;
-}
-
-.blockquote--two {
-  margin-bottom: 20px;
-  font-size: 0.75em;
-}
-
-@media (min-width: 600px) {
-  .blockquote {
-    width: 50%;
-    padding-right: 10px;
-    padding-left: 10px;
-    margin: 0 auto;
-    float: right;
-    padding: 40px 0 40px 40px;
-  }
-}
+  margin-left: 20px; }
+  .blockquote--one {
+    margin-bottom: 20px;
+    font-size: 1.5em;
+    font-style: italic; }
+  .blockquote--one::first-letter {
+    text-indent: -20px; }
+  .blockquote--two {
+    margin-bottom: 20px;
+    font-size: 0.75em; }
+  @media (min-width: 600px) {
+    .blockquote {
+      float: right;
+      padding: 40px 0 40px 40px;
+      margin: 0 auto; } }
 
 .container--two {
   display: inline-flex;
-  flex-direction: row;
-}
+  flex-direction: row; }
 
 .bar {
-  background-color: rgba(0, 0, 0, 0.5);
-  list-style: none;
   display: inline-flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
-  margin: 0;
-  padding: 0;
   height: 60px;
-}
-
-.bar--content a {
-  text-decoration: none;
-  color: white;
-}
-
-.bar--one {
-  font-size: 1.5em;
-  font-family: 'Roboto Slab', serif;
-  font-weight: bold;
-  background-color: transparent;
-  padding-left: 20px;
-}
-
-.bar--two {
-  padding-right: 20px;
-  background-color: transparent;
-}
-
-.bar--three {
-  display: none;
-}
-
-@media (min-width: 500px) {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  flex-direction: row;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: space-between;
+  align-items: center; }
+  .bar--content a {
+    color: #fff;
+    text-decoration: none; }
+  .bar--one {
+    padding-left: 20px;
+    font-family: "Roboto Slab", serif;
+    font-size: 1.5em;
+    font-weight: bold;
+    background-color: transparent; }
+  .bar--two {
+    padding-right: 20px;
+    background-color: transparent; }
   .bar--three {
-    display: initial;
-    background-color: #666;
-    border-radius: 4px;
-    padding: 3px 20px;
-    max-height: 30px;
-    align-self: center;
-    margin: auto;
-  }
-}
+    display: none; }
+  @media (min-width: 500px) {
+    .bar--three {
+      max-height: 30px;
+      padding: 3px 20px;
+      margin: auto;
+      background-color: #666;
+      border-radius: 4px;
+      align-self: center; } }
