--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,7 +1,6 @@
 @import "scss/variables";
 
 .card {
-  background: pink;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -43,5 +42,10 @@
       flex-direction: row;
       align-items: center;
       margin: 0 auto;
+
+      &--three{
+        align-self: center;
+      }
+
     }
   }
