--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,17 +1,22 @@
 @import "scss/variables";
 
 .card {
-  background: pink;
-  width: 100%;
   display: flex;
-  flex-direction: column;
-  text-align: center;
+  width: 100%;
   overflow: auto;
+  text-align: center;
+  flex-direction: column;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   &__img {
     width: 80%;
-    border-radius: 100%;
     margin: 0 auto;
+    border-radius: 100%;
   }
 
   &__blockquote {
@@ -25,23 +30,23 @@
   }
 
   &__text {
-    font-size: 12px;
     margin-bottom: $gutter;
+    font-size: 12px;
   }
 }
 
-  @media (min-width: 400px) {
-    .card {
-      flex-direction: column;
-      align-items: center;
-      margin: 0 auto;
-    }
+@media (min-width: 400px) {
+  .card {
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
   }
+}
 
-  @media (min-width: 600px) {
-    .card {
-      flex-direction: row;
-      align-items: center;
-      margin: 0 auto;
-    }
+@media (min-width: 600px) {
+  .card {
+    margin: 0 auto;
+    flex-direction: row;
+    align-items: center;
   }
+}
