--- a/scss/header.scss
+++ b/scss/header.scss
@@ -15,15 +15,16 @@
   }
 
   &--one .content {
-    margin-top: $gutter * 10;
+    margin: $gutter*15;
     text-align: center;
     word-break: break-all;
   }
 
   &--two {
     max-height: 70vh;
+    width: 100%;
     background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
-    background-position: center;
+    background-position: 0 0;
     background-size: contain;
   }
 
