--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,3 +1,41 @@
-.footer{
+@import "scss/variables";
 
+.footer {
+  position: absolute;
+  width: 100%;
+  max-width: $max-width;
+  margin-top: 30px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.footer__row {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  padding: 0 $gutter * 15;
+}
+
+.footer__content {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__col {
+  padding-top: $gutter;
+  padding-bottom: $gutter * 2;
+  align-self: flex-start;
+}
+
+.footer__copyright {
+  display: flex;
+  width: 90vw;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-size: 14px;
+  color: #aaa;
+  border-top: 2px solid #aaa;
+  justify-content: center;
 }
