--- a/scss/form.scss
+++ b/scss/form.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
 
   &__row {
+    @include columns(12);
     display: flex;
     flex-wrap: wrap;
     margin-right: - $gutter / 2;
