--- a/scss/header.scss
+++ b/scss/header.scss
@@ -21,7 +21,7 @@
   }
 
   &--two {
-    max-height: 70vh;
+    min-height: 70vh;
     background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
     background-position: center;
     background-size: contain;
