--- a/styles.css
+++ b/styles.css
@@ -249,9 +249,9 @@ main {
 .form {
   display: flex;
   max-width: 1200px;
-  flex-direction: column;
   margin-top: 80px;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  flex-direction: column; }
   .form__row {
     width: 100%;
     padding-right: 10px;
